Prevent fancybox nav from covering video controls

--- a/app/assets/stylesheets/lentil/breakpoint/sass/_components.scss
+++ b/app/assets/stylesheets/lentil/breakpoint/sass/_components.scss
@@ -144,6 +144,10 @@ div.images {
     min-width: 250px;
 }
 
+.fancybox-nav {
+    height:90%;
+}
+
 .pagination .disabled, .pagination .current {
     color: #000;
 }
